# playdate-docdef

./: .editorconfig  .taplo.toml  Cargo.toml  DESIGN.md  Fixes.toml  README.md  Replace.toml  Types.toml  class.luars  lua.pest  luars.pest  playdate-c.luars  playdate.luars  stub-docdef.lua  stub.lua
.github/workflows/: ci.yml
.zed/: settings.json
data/: API.toml  Alias.toml  Class.toml  Invalid.toml  Notes.toml  Property.toml  RenameFn.toml  RenameFuture.toml  RenameOld.toml  RenameVar.toml  Return.toml  Type.toml  Typo.toml  Typo_C.toml
doc_scraper/: Cargo.toml
doc_scraper/src/: main.rs
src/: api.rs  args.rs  class.rs  config.rs  doc_scraper.rs  docs.rs  finstub.rs  fixes.rs  luars.pest  luars.rs  main.rs  output.rs  parser.rs  scrape.rs  stub.rs
